# dzo-tz-agents

./: .dockerignore  .env.example  .gitignore  .trivyignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TESTING.md  config.py  docker-compose.langfuse.yml  docker-compose.monitoring.yml  docker-compose.yml  e2e_runner.py  final_report.md  fix_agent.patch  fix_api_test.py  fix_is_usable.patch  fix_test.patch  fix_test_api.patch  fix_test_api.py  fix_test_procurement.py  fix_tests.py  get_data.py  get_data2.py  get_data3.py  ground_truth.json  ground_truth_report.py  health_check.py  main.py  pre_commit.sh  pyproject.toml  requirements.txt  run_all.sh  test_agent_local.py  test_e2e_dzo.py
.github/workflows/: ci.yml  deploy.yml  publish.yml  security.yml
agent1_dzo_inspector/: ALGORITHM.md  __init__.py  agent.py  runner.py  tools.py
agent21_tender_inspector/: ALGORITHM.md  agent.py  runner.py  tools.py
agent2_tz_inspector/: ALGORITHM.md  __init__.py  agent.py  runner.py  tools.py
agent3_collector_inspector/: ALGORITHM.md  __init__.py  agent.py  runner.py  tools.py
agent4_leasing_parser/: __init__.py  agent.py  runner.py  tools.py
agent5_osago_parser/: __init__.py  agent.py  runner.py  tools.py
agent6_transportation_parser/: __init__.py  agent.py  runner.py  tools.py
agent7_osgop_parser/: __init__.py  agent.py  runner.py  tools.py
agent8_responsibility_parser/: __init__.py  agent.py  runner.py  tools.py
analysis/: CODE_AUDIT.md  FIXES_ROADMAP.md  file_analysis.json  issues_catalog.json
api/: __init__.py  app.py  healthcheck.py  metrics.py  rate_limit.py  schemas.py  security.py
api/routes/: jobs.py  process.py  system.py
api/services/: decision.py  processing.py  routing.py
course/: README.md  glossary.md  lesson_00_terminal.md  lesson_01_venv.md  lesson_02_bug.md  lesson_03_curl.md  lesson_04_token.md  lesson_05_llm.md  lesson_06_what_is_tool.md  lesson_07_agent_as_tool.md  lesson_08_mcp_a2a.md  lesson_09_agent_dzo.md  lesson_10_agent_tz.md  lesson_11_agents_tender_collector.md  lesson_12_prompts.md  lesson_13.md  lesson_14.md  lesson_15.md  lesson_16.md  lesson_17_testing.md  lesson_18_ci.md  lesson_19_skills.md  lesson_20_insurance_cbr.md
course/architecture/: README.md
docs/: accuracy.md  adding_new_agent.md  agents.md  api.md  architecture.md  deployment.md  mcp-a2a.md  ui-settings.md
docs/audit/: AUDIT_REPORT_FINAL.md  TECHNICAL_DEBT.md
monitoring/: alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: agents.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/rules/: agents.yml  slo.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
prompts/: collector_v1.md  dzo_v1.md  leasing_v1.md  osago_v1.md  osgop_v1.md  responsibility_v1.md  tender_v1.md  tender_v2.md  transportation_v1.md  tz_v1.md  tz_v2.md
real_docs/: dzo_example.txt  tz_example.txt
shared/: MODULES.md  __init__.py  agent_tooling.py  base_runner.py  chunked_analysis.py  database.py  date_normalizer.py  document_parser.py  email_client.py  email_sender.py  file_extractor.py  file_storage.py  insurance_domain.py  llm.py  logger.py  mcp_rate_limiter.py  mcp_server.py  prompt_loader.py  runner_base.py  schemas.py  telegram_notify.py  tracing.py
shared/migrations/: 001_create_jobs.sql  001_init.sql  002_add_trace_column.sql
tests/: conftest.py  test_accuracy_report.py  test_agent4_leasing.py  test_agent5_osago.py  test_agent6_transportation.py  test_agent7_osgop.py  test_agent8_responsibility.py  test_agent_tooling.py  test_agent_tooling_coverage.py  test_api.py  test_api.py.orig  test_api_extended.py  test_chunked_analysis.py  test_chunked_coverage.py  test_collector.py  test_collector_runner.py  test_config.py  test_da_schemas.py  test_database.py  test_database_coverage.py  test_date_normalizer.py  test_decision_normalizer.py  test_document_parser.py  test_dzo_tz_runners.py  test_e2e.py  test_e2e.py.rej  test_email_client.py  test_email_client_async.py  test_email_sender.py  test_file_extractor.py  test_file_extractor_coverage.py  test_file_storage.py  test_healthcheck.py  test_insurance_domain.py  test_integration.py  test_llm.py  test_llm_coverage.py  test_logger.py  test_mcp_async_pipeline.py  test_mcp_rate_limiter.py  (+15 more)
tests/fixtures/: expected_results.py  real_procurement_docs.py  real_procurement_expected.json
tests/fixtures/collector/: АО Лютик - Анкета участника ТО 3115-ДИТ-Сервер.docx  Анкета участника ТО 3115-ДИТ-Сервер.docx  ООО Гвоздика - Анкета участника ТО 3115-ДИТ-Сервер.docx  ООО Ромашка - Анкета участника ТО 3115-ДИТ-Сервер.docx  Список участников к ТО 3115-ДИТ-Сервер.xlsx
tests/fixtures/tenders/: tender_cargo_1.md  tender_cargo_2.md  tender_dms_1.md  tender_dms_2.md  tender_dms_3.md  tender_kasko_1.md  tender_kasko_2.md  tender_liability_1.md  tender_liability_2.md  tender_life_ns_1.md  tender_life_ns_2.md  tender_osago_1.md  tender_osago_2.md  tender_property_1.md  tender_property_2.md  tender_property_no_cbr_license.md  tender_smr_1.md  tender_smr_2.md
ui/: app.py  config.py
