[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dzo-tz-agents"
version = "1.5.0"
description = "LLM-агенты для автоматической проверки заявок ДЗО, ТЗ и tender с поддержкой MCP/A2A интеграции"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "agent", "fastapi", "openai", "langchain", "email", "dzo", "mcp", "a2a"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "openai>=1.30.0",
    "mcp[cli]>=1.3.0",
    "imapclient>=2.3.1",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
    "httpx[http2]>=0.27.0",
    "schedule>=1.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "slowapi>=0.1.9",
    "pydantic>=2.7.0",
    "psycopg2-binary>=2.9.9",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.35.0"]
mcp = ["mcp[cli]>=1.0.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pip-audit>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/OlegKarenkikh/dzo-tz-agents"
Repository = "https://github.com/OlegKarenkikh/dzo-tz-agents"
Changelog = "https://github.com/OlegKarenkikh/dzo-tz-agents/blob/main/CHANGELOG.md"
Issues = "https://github.com/OlegKarenkikh/dzo-tz-agents/issues"

[project.scripts]
dzo-agents = "main:run"
dzo-api = "api.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent1_dzo_inspector*",
    "agent2_tz_inspector*",
    "agent21_tender_inspector*",
    "shared*",
    "api*",
]
exclude = ["tests*", "ui*", "nginx*", "monitoring*"]

[tool.setuptools.package-data]
"shared.migrations" = ["*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401", "E402", "I001"]
"agent1_dzo_inspector/runner.py" = ["I001", "E402"]
"agent2_tz_inspector/runner.py" = ["I001", "E402"]
"agent21_tender_inspector/runner.py" = ["I001", "E402"]
"api/app.py" = ["I001", "E402"]
"shared/*.py" = ["UP006", "UP035", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "agent1_dzo_inspector", "agent2_tz_inspector", "agent21_tender_inspector", "api", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["agent1_dzo_inspector", "agent2_tz_inspector", "agent21_tender_inspector", "shared", "api"]
omit = ["tests/*", "ui/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
